@@ -1012,6 +1012,14 @@ class ElectrumWindow(QMainWindow, MessageBoxMixin, PrintError):
         d = show_transaction(tx, self, tx_desc)
         self._tx_dialogs.add(d)
 
+    def addr_toggle_slp(self):
+        if Address.FMT_UI == 3:
+            self.show_slp_addr_btn.setText("Show SLP Address")
+            self.toggle_cashaddr(1, True)
+        else: 
+            self.show_slp_addr_btn.setText("Show BCH Address")
+            self.toggle_cashaddr(2, True)
+
     def create_receive_tab(self):
         # A 4-column grid layout.  All the stretch is in the last column.
         # The exchange rate plugin adds a fiat widget in column 2
@@ -1031,24 +1039,28 @@ class ElectrumWindow(QMainWindow, MessageBoxMixin, PrintError):
         grid.addWidget(label, 0, 0)
         grid.addWidget(self.receive_address_e, 0, 1, 1, -1)
 
+        self.show_slp_addr_btn = QPushButton(_('Show SLP Address'))
+        self.show_slp_addr_btn.clicked.connect(self.addr_toggle_slp)
+        grid.addWidget(self.show_slp_addr_btn, 1, 1)
+
         self.receive_message_e = QLineEdit()
         label = QLabel(_('&Description'))
         label.setBuddy(self.receive_message_e)
-        grid.addWidget(label, 1, 0)
-        grid.addWidget(self.receive_message_e, 1, 1, 1, -1)
+        grid.addWidget(label, 2, 0)
+        grid.addWidget(self.receive_message_e, 2, 1, 1, -1)
         self.receive_message_e.textChanged.connect(self.update_receive_qr)
 
         self.receive_amount_e = BTCAmountEdit(self.get_decimal_point)
         label = QLabel(_('Requested &amount'))
         label.setBuddy(self.receive_amount_e)
-        grid.addWidget(label, 2, 0)
-        grid.addWidget(self.receive_amount_e, 2, 1)
+        grid.addWidget(label, 3, 0)
+        grid.addWidget(self.receive_amount_e, 3, 1)
         self.receive_amount_e.textChanged.connect(self.update_receive_qr)
 
         self.fiat_receive_e = AmountEdit(self.fx.get_currency if self.fx else '')
         if not self.fx or not self.fx.is_enabled():
             self.fiat_receive_e.setVisible(False)
-        grid.addWidget(self.fiat_receive_e, 2, 2, Qt.AlignLeft)
+        grid.addWidget(self.fiat_receive_e, 3, 2, Qt.AlignLeft)
         self.connect_fields(self, self.receive_amount_e, self.fiat_receive_e, None)
 
         self.expires_combo = QComboBox()
@@ -1063,12 +1075,12 @@ class ElectrumWindow(QMainWindow, MessageBoxMixin, PrintError):
         ])
         label = HelpLabel(_('Request &expires'), msg)
         label.setBuddy(self.expires_combo)
-        grid.addWidget(label, 3, 0)
-        grid.addWidget(self.expires_combo, 3, 1)
+        grid.addWidget(label, 4, 0)
+        grid.addWidget(self.expires_combo, 4, 1)
         self.expires_label = QLineEdit('')
         self.expires_label.setReadOnly(1)
         self.expires_label.hide()
-        grid.addWidget(self.expires_label, 3, 1)
+        grid.addWidget(self.expires_label, 4, 1)
 
         self.save_request_button = QPushButton(_('&Save'))
         self.save_request_button.clicked.connect(self.save_payment_request)
@@ -1090,7 +1102,7 @@ class ElectrumWindow(QMainWindow, MessageBoxMixin, PrintError):
         buttons.addStretch(1)
         buttons.addWidget(self.save_request_button)
         buttons.addWidget(self.new_request_button)
-        grid.addLayout(buttons, 4, 1, 1, 2)
+        grid.addLayout(buttons, 5, 1, 1, 2)
 
         self.receive_requests_label = QLabel(_('Re&quests'))
 
@@ -1116,8 +1128,24 @@ class ElectrumWindow(QMainWindow, MessageBoxMixin, PrintError):
                     slf = weakSelf()
                     if slf:
                         slf.check_and_reset_receive_address_if_needed()
+                c, u, x = self.main_window.wallet.get_balance()
+                bal = c + u - self.main_window.wallet.get_slp_locked_balance()
+                if bal < 1000:
+                    if not self.low_balance_warning_shown:
+                        self.main_window.show_warning("Low balance.\n\nBefore using SLP tokens you need to add Bitcoin Cash to this wallet.  We recommend a minimum of 0.0001 BCH to get started.")
+                    self.main_window.toggle_cashaddr(1, True)
+                    self.low_balance_warning_shown = False
+                else:
+                    self.main_window.toggle_cashaddr(2, True)
+                if Address.FMT_UI == 3:
+                    self.main_window.show_slp_addr_btn.setText("Show BCH Address")
+                else: 
+                    self.main_window.show_slp_addr_btn.setText("Show SLP Address")
+
 
         w = ReceiveTab()
+        w.low_balance_warning_shown = False
+        w.main_window = self
         w.searchable_list = self.request_list
         vbox = QVBoxLayout(w)
         vbox.addLayout(hbox)
@@ -2469,6 +2497,7 @@ class ElectrumWindow(QMainWindow, MessageBoxMixin, PrintError):
         c, u, x = self.wallet.get_balance()
         bal = c + u - self.wallet.get_slp_locked_balance()
         if bal < 1000:
+            self.receive_tab.low_balance_warning_shown = True
             self.show_warning("Low balance.\n\nBefore creating a new token you need to add Bitcoin Cash to this wallet.  We recommend a minimum of 0.0001 BCH to get started.\n\nSend BCH to the address displayed in the 'Receive' tab.")
             self.show_receive_tab()
             self.toggle_cashaddr(1, True)
